Now cards expand on click as expected. HT to Viktor for helping me with getting jQuery right, and to Magnús for the flexbox pointer. The page now works as expected however not as planned. I may have to put the cards on a grid after all to avoid the currently ugly jumping behaviour.

--- a/source/assets/stylesheets/_people.scss
+++ b/source/assets/stylesheets/_people.scss
@@ -7,7 +7,7 @@
   padding-bottom: $base-spacing;
   @include display(flex);
   @include flex-grow(1);
-  @include flex-basis(em(300,18));
+  @include flex-basis(inherit);
   @include transition (all 0.2s ease-in-out);
   @include flex-wrap(nowrap);
   @include flex-direction(row);
@@ -37,6 +37,7 @@
   @include flex-basis(auto);
   @include flex-direction(row);
   padding: $large-spacing $base-spacing $base-spacing $base-spacing;
+  max-width: em(500);
 }
 
 .employee-card-header {
